slides/ex for block 2

--- a/slides/rmed01-model.html
+++ b/slides/rmed01-model.html
@@ -562,7 +562,7 @@ Save it as `tree_mod` and look at the object. What is different about the output
 *Hint: you'll need https://www.tidymodels.org/find/parsnip/*
 
 
-<div class="countdown" id="timer_5f476917" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4769ef" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1015,7 +1015,7 @@ Use `initial_split()`, `training()`, and `testing()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5f47670f" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f476da1" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1119,7 +1119,7 @@ Note your accuracy from above. Then change your seed number and rerun just the l
 
 Try it a few times with a few different seeds.
 
-<div class="countdown" id="timer_5f4768e1" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f476adf" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1372,6 +1372,20 @@ background-color: #f5f5f5
 ]
 
 ---
+background-image: url(images/diamonds.jpg)
+background-size: contain
+background-position: left
+class: middle, center
+background-color: #f5f5f5
+
+.pull-right[
+## How can we use the training set to compare, evaluate, and tune models?
+
+]
+
+
+
+---
 background-image: url(https://www.tidymodels.org/start/resampling/img/resampling.svg)
 background-size: 60%
 
@@ -1477,7 +1491,7 @@ alz_folds &lt;-
 alz_folds
 ```
 
-<div class="countdown" id="timer_5f476860" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f476d1f" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1645,7 +1659,7 @@ tree_mod %&gt;%
   accuracy(truth = true_class, estimate = .pred_class)
 ```
 
-<div class="countdown" id="timer_5f4769ec" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f476c3e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
