--- a/slides/rmed02-workflows.html
+++ b/slides/rmed02-workflows.html
@@ -4,7 +4,7 @@
     <title>Build a better training set</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-08-26" />
+    <meta name="date" content="2020-08-27" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
@@ -57,7 +57,7 @@ class: inverse, middle, center
 
 # Build a better training set
 
-# With recipes
+# with recipes
 
 ---
 class: middle, center, frame
@@ -65,6 +65,29 @@ class: middle, center, frame
 # Recipes
 
 &lt;iframe src="https://recipes.tidymodels.org" width="100%" height="400px"&gt;&lt;/iframe&gt;
+
+---
+background-image: url(images/cranes.jpg)
+background-position: left
+background-size: contain
+class: middle
+
+.right-column[
+
+# Preprocessing options
+
++ Encode categorical predictors
+
++ Center and scale variables
+
++ Handle class imbalance
+
++ Impute missing data
+
++ Perform dimensionality reduction 
+
++ *A lot more!*
+]
 
 ---
 background-image: url(images/workflows/workflows.013.jpeg)
@@ -127,13 +150,12 @@ rec &lt;-
 &lt;img src="figs/rmed02-workflows/unnamed-chunk-5-1.png" width="720" style="display: block; margin: auto;" /&gt;
 
 ---
+class: middle
 
 .pull-left[
 ## Before recipe
 
-```r
-alz_train %&gt;% 
-  count(Genotype, sort = TRUE)
+```
 # # A tibble: 6 x 2
 #   Genotype     n
 #   &lt;fct&gt;    &lt;int&gt;
@@ -152,11 +174,7 @@ alz_train %&gt;%
 
 ## After recipe
 
-```r
-rec %&gt;% 
-  prep() %&gt;% 
-  bake(new_data = alz_train) %&gt;% 
-  count(Genotype, sort = TRUE)
+```
 # # A tibble: 5 x 2
 #   Genotype     n
 #   &lt;fct&gt;    &lt;int&gt;
@@ -193,6 +211,22 @@ Take the average/mode/etc. outcome
 ---
 class: middle, frame
 
+
+# .center[To specify a model with parsnip]
+
+.right-column[
+
+1\. Pick a .display[model]
+
+2\. Set the .display[engine]
+
+3\. Set the .display[mode] (if needed)
+
+]
+
+---
+class: middle, frame
+
 # .center[To specify a KNN model with parsnip]
 
 
@@ -212,28 +246,6 @@ class: middle, center
 KNN requires all numeric predictors, and all need to be **centered** and **scaled**. 
 
 What does that mean?
-
-
-
-
----
-class: middle
-
-.center[
-# Quiz
-
-How does recipes know which variables are **numeric** and what is **nominal**?
-]
-
---
-
-
-```r
-rec &lt;- 
-  recipe(Class ~ ., 
-*        data = alz)
-```
-
 
 
 
@@ -260,34 +272,6 @@ background-size: contain
 ---
 background-image: url(images/pca.004.jpeg)
 background-size: contain
-
----
-
-
-
-
-```
-# # A tibble: 33 x 131
-#    ACE_CD143_Angio… ACTH_Adrenocort…    AXL Adiponectin
-#               &lt;dbl&gt;            &lt;dbl&gt;  &lt;dbl&gt;       &lt;dbl&gt;
-#  1           0.657            -0.254  0.879       0.142
-#  2          -1.10             -1.08  -1.36        0.491
-#  3           0.515             0.101  0.361      -0.531
-#  4          -1.34             -2.48  -0.910      -0.315
-#  5           0.860             1.13   1.80        0.167
-#  6           0.586             0.101 -0.419      -1.21 
-#  7          -1.60              0.101  0.539       0.214
-#  8           1.18              0.723  0.539       0.567
-#  9           1.75              0.425  0.712      -0.880
-# 10           0.0536           -1.32   0.712       0.305
-# # … with 23 more rows, and 127 more variables:
-# #   Alpha_1_Antichymotrypsin &lt;dbl&gt;,
-# #   Alpha_1_Antitrypsin &lt;dbl&gt;, Alpha_1_Microglobulin &lt;dbl&gt;,
-# #   Alpha_2_Macroglobulin &lt;dbl&gt;,
-# #   Angiopoietin_2_ANG_2 &lt;dbl&gt;, …
-```
-
-
 
 ---
 
@@ -368,7 +352,9 @@ needed as predictors for models like KNN.
 
 
 ```r
-rec %&gt;% 
+rec &lt;- 
+  recipe(Class ~ ., data = alz) %&gt;%
+  step_other(Genotype, threshold = .03) %&gt;% 
 * step_dummy(all_nominal(), -all_outcomes())
 ```
 
@@ -383,11 +369,31 @@ Use commas to separate
 
 
 ```r
-rec %&gt;% 
-* step_novel(all_nominal(), -all_outcomes()) %&gt;%
-  step_zv(all_predictors())
+rec &lt;- 
+  recipe(Class ~ ., data = alz) %&gt;%
+  step_other(Genotype, threshold = .03) %&gt;% 
+* step_dummy(all_nominal(), -all_outcomes())
 ```
 
+
+
+---
+class: middle
+
+.center[
+# Quiz
+
+How does recipes know which variables are **numeric** and what is **nominal**?
+]
+
+--
+
+
+```r
+rec &lt;- 
+  recipe(Class ~ ., 
+*        data = alz)
+```
 
 
 ---
@@ -828,9 +834,7 @@ class: middle
 ---
 class: middle, center
 
-# Quiz
-
-Let's think about the modeling. 
+# Let's think about the modeling. 
 
 What if there were no individuals with `Genotype` E2E2 in the training data?
 
@@ -844,7 +848,7 @@ Will the model have a coefficient for `Genotype` E2E2?
 
 --
 
-What will happen if the test data has a home with a shed roof?
+What will happen if the test data includes a person with `Genotype` E2E2?
 
 --
 
@@ -863,7 +867,9 @@ which lets R intelligently predict new levels in the test set.
 
 
 ```r
-rec %&gt;% 
+rec &lt;- 
+  recipe(Class ~ ., data = alz) %&gt;%
+  step_other(Genotype, threshold = .03) %&gt;% 
 * step_novel(all_nominal(), -all_outcomes()) %&gt;%
   step_dummy(all_nominal(), -all_outcomes()) 
 ```
@@ -895,9 +901,11 @@ Intelligently handles zero variance variables
 
 
 ```r
-rec %&gt;% 
+rec &lt;- 
+  recipe(Class ~ ., data = alz) %&gt;%
+  step_other(Genotype, threshold = .03) %&gt;% 
   step_novel(all_nominal(), -all_outcomes()) %&gt;% 
-  step_dummy(all_nominal(), -all_outcomes()) %&gt;%
+  step_dummy(all_nominal(), -all_outcomes()) %&gt;% 
 * step_zv(all_predictors())
 ```
 
@@ -914,8 +922,11 @@ Centers then scales numeric variable (mean = 0, sd = 1)
 
 ```r
 rec &lt;- 
-  recipe(Class ~ ., 
-         data = alz) %&gt;% 
+  recipe(Class ~ ., data = alz) %&gt;%
+  step_other(Genotype, threshold = .03) %&gt;% 
+  step_novel(all_nominal(), -all_outcomes()) %&gt;% 
+  step_dummy(all_nominal(), -all_outcomes()) %&gt;% 
+  step_zv(all_predictors()) %&gt;% 
 * step_normalize(all_numeric())
 ```
 ---
@@ -923,31 +934,24 @@ class: your-turn
 
 # Your Turn 1
 
-Put it all together! Make a new recipe for using a K-nearest neighbors model to classify impaired versus control patients; here are the steps:
-
-1. Lumps all `Genotype`s with threshold &lt; 
-1. Adds a novel level to all factors  
-2. Convert all factors to dummy variables  
-3. Catches any zero variance variables  
-4. Normalizes all of the predictors (centers and scales)
-5. Computes the first 5 principal components  
+Unscramble! You have all the steps from our `knn_rec`- your challenge is to *unscramble* them into the right order! 
 
 Save the result as `knn_rec`
 
-<div class="countdown" id="timer_5f4739ba" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f477922" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
 
 ```r
-knn_recipe &lt;- 
+knn_rec &lt;- 
   recipe(formula = Class ~ ., data = alz) %&gt;% 
   step_novel(all_nominal(), -all_outcomes()) %&gt;% 
   step_dummy(all_nominal(), -all_outcomes()) %&gt;% 
   step_zv(all_predictors()) %&gt;% 
   step_normalize(all_predictors(), -all_nominal()) 
-knn_recipe
+knn_rec
 # Data Recipe
 # 
 # Inputs:
@@ -964,26 +968,6 @@ knn_recipe
 # Centering and scaling for all_predictors(), -all_nominal()
 ```
 
----
-
-
-```r
-summary(knn_recipe)
-# # A tibble: 131 x 4
-#    variable                        type    role      source 
-#    &lt;chr&gt;                           &lt;chr&gt;   &lt;chr&gt;     &lt;chr&gt;  
-#  1 ACE_CD143_Angiotensin_Converti  numeric predictor origin…
-#  2 ACTH_Adrenocorticotropic_Hormon numeric predictor origin…
-#  3 AXL                             numeric predictor origin…
-#  4 Adiponectin                     numeric predictor origin…
-#  5 Alpha_1_Antichymotrypsin        numeric predictor origin…
-#  6 Alpha_1_Antitrypsin             numeric predictor origin…
-#  7 Alpha_1_Microglobulin           numeric predictor origin…
-#  8 Alpha_2_Macroglobulin           numeric predictor origin…
-#  9 Angiopoietin_2_ANG_2            numeric predictor origin…
-# 10 Angiotensinogen                 numeric predictor origin…
-# # … with 121 more rows
-```
 
 ---
 class: middle, center, frame
@@ -999,19 +983,6 @@ class: middle, center, frame
 
 ```r
 library(usemodels)
-use_ranger(Class ~ ., data = alz, tune = FALSE)
-# ranger_recipe &lt;- 
-#   recipe(formula = Class ~ ., data = alz) 
-# 
-# ranger_model &lt;- 
-#   rand_forest(trees = 1000) %&gt;% 
-#   set_mode("classification") %&gt;% 
-#   set_engine("ranger") 
-# 
-# ranger_workflow &lt;- 
-#   workflow() %&gt;% 
-#   add_recipe(ranger_recipe) %&gt;% 
-#   add_model(ranger_model)
 use_kknn(Class ~ ., data = alz, verbose = TRUE, tune = FALSE)
 # kknn_recipe &lt;- 
 #   recipe(formula = Class ~ ., data = alz) %&gt;% 
@@ -1038,6 +1009,46 @@ use_kknn(Class ~ ., data = alz, verbose = TRUE, tune = FALSE)
 #   add_recipe(kknn_recipe) %&gt;% 
 #   add_model(kknn_model)
 ```
+
+---
+
+
+```r
+use_glmnet(Class ~ ., data = alz, verbose = TRUE, tune = FALSE)
+# glmnet_recipe &lt;- 
+#   recipe(formula = Class ~ ., data = alz) %&gt;% 
+#   step_novel(all_nominal(), -all_outcomes()) %&gt;% 
+#   ## This model requires the predictors to be numeric. The most common 
+#   ## method to convert qualitative predictors to numeric is to create 
+#   ## binary indicator variables (aka dummy variables) from these 
+#   ## predictors. 
+#   step_dummy(all_nominal(), -all_outcomes()) %&gt;% 
+#   ## Regularization methods sum up functions of the model slope 
+#   ## coefficients. Because of this, the predictor variables should be on 
+#   ## the same scale. Before centering and scaling the numeric predictors, 
+#   ## any predictors with a single unique value are filtered out. 
+#   step_zv(all_predictors()) %&gt;% 
+#   step_normalize(all_predictors(), -all_nominal()) 
+# 
+# glmnet_model &lt;- 
+#   logistic_reg() %&gt;% 
+#   set_mode("classification") %&gt;% 
+#   set_engine("glmnet") 
+# 
+# glmnet_workflow &lt;- 
+#   workflow() %&gt;% 
+#   add_recipe(glmnet_recipe) %&gt;% 
+#   add_model(glmnet_model)
+```
+
+---
+class: inverse, middle, center
+
+## Now we've built a recipe.
+
+--
+
+## But, how do we *use* a recipe?
 
 ---
 class: center, middle, frame
@@ -1142,10 +1153,6 @@ Adds a parsnip model spec to a workflow
 workflow() %&gt;% add_model(knn_mod)
 ```
 
----
-background-image: url(images/zestimate.png)
-background-position: center
-background-size: contain
 
 ---
 class: middle, center
@@ -1163,9 +1170,9 @@ class: your-turn
 
 # Your Turn 2
 
-Make a workflow that combines `pca_rec` and with `rt_spec`.
+Fill in the blanks to make a workflow that combines `knn_rec` and with `knn_mod`.
 
-<div class="countdown" id="timer_5f473b90" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4777aa" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1175,7 +1182,7 @@ Make a workflow that combines `pca_rec` and with `rt_spec`.
 ```r
 knn_wf &lt;-
   workflow() %&gt;% 
-  add_recipe(knn_recipe) %&gt;% 
+  add_recipe(knn_rec) %&gt;% 
   add_model(knn_mod)
 knn_wf
 # ══ Workflow ════════════════════════════════════════════════════════════════════════
@@ -1211,7 +1218,7 @@ Adds a recipe to a workflow.
 ```r
 knn_wf &lt;- 
   workflow() %&gt;%
-* add_recipe(knn_recipe) %&gt;%
+* add_recipe(knn_rec) %&gt;%
   add_model(knn_mod)
 ```
 
@@ -1298,9 +1305,7 @@ class: your-turn
 
 Run the first chunk. Then try our KNN workflow on `alz_folds`. What is the ROC AUC?
 
-
-
-<div class="countdown" id="timer_5f47399c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f477904" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1310,7 +1315,7 @@ Run the first chunk. Then try our KNN workflow on `alz_folds`. What is the ROC A
 ```r
 set.seed(100)
 alz_folds &lt;- 
-    vfold_cv(alz_train, v = 10, strata = Class)
+  vfold_cv(alz_train, v = 10, strata = Class)
 
 knn_wf %&gt;% 
   fit_resamples(resamples = alz_folds) %&gt;% 
@@ -1340,6 +1345,92 @@ After
 
 ![](https://media.giphy.com/media/108GZES8iG0myc/giphy.gif)
 ]
+
+---
+
+class: middle
+
+.center[
+# `update_recipe()`
+
+Replace the recipe in a workflow.
+
+]
+
+
+```r
+_wf %&gt;%
+* update_recipe(glmnet_rec)
+```
+
+---
+
+class: middle
+
+.center[
+# `update_model()`
+
+Replace the model in a workflow.
+
+]
+
+
+```r
+_wf %&gt;%
+* update_model(tree_mod)
+```
+
+
+---
+class: your-turn
+
+# Your Turn 4
+
+Turns out, the same `knn_rec` recipe can also be used to fit a penalized logistic regression model. Let's try it out!
+
+
+```r
+plr_mod &lt;- 
+  logistic_reg(penalty = .01, mixture = 1) %&gt;% 
+  set_engine("glmnet") %&gt;% 
+  set_mode("classification")
+
+plr_mod %&gt;% 
+  translate()
+# Logistic Regression Model Specification (classification)
+# 
+# Main Arguments:
+#   penalty = 0.01
+#   mixture = 1
+# 
+# Computational engine: glmnet 
+# 
+# Model fit template:
+# glmnet::glmnet(x = missing_arg(), y = missing_arg(), weights = missing_arg(), 
+#     alpha = 1, family = "binomial")
+```
+
+<div class="countdown" id="timer_5f47780c" style="right:0;bottom:0;" data-warnwhen="0">
+<code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+---
+
+
+```r
+glmnet_wf &lt;-
+  knn_wf %&gt;% 
+  update_model(plr_mod)
+
+glmnet_wf %&gt;% 
+  fit_resamples(resamples = alz_folds) %&gt;% 
+  collect_metrics() 
+# # A tibble: 2 x 5
+#   .metric  .estimator  mean     n std_err
+#   &lt;chr&gt;    &lt;chr&gt;      &lt;dbl&gt; &lt;int&gt;   &lt;dbl&gt;
+# 1 accuracy binary     0.897    10  0.0128
+# 2 roc_auc  binary     0.926    10  0.0160
+```
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
