update slide links

--- a/site/index.html
+++ b/site/index.html
@@ -1588,9 +1588,9 @@ We will use the software listed above only as an important backup should there b
 </ul>
 <h3 id="slides">Slides</h3>
 <ul>
-<li><a href="/slides/rmed01-model.html">01: Build a model</a></li>
-<li><a href="/slides/rmed02-workflows.html">02: Build better models</a></li>
-<li><a href="/slides/rmed03-tune-trees.html">03: Tune tree-based models</a></li>
+<li><a href="slides/rmed01-model.html">01: Build a model</a></li>
+<li><a href="slides/rmed02-workflows.html">02: Build better models</a></li>
+<li><a href="slides/rmed03-tune-trees.html">03: Tune tree-based models</a></li>
 </ul>
 <h2 id="workshops">Workshops</h2>
 <p>Upcoming and past offerings:</p>
