--- a/slides/rmed03-tune.html
+++ b/slides/rmed03-tune.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Tune models</title>
+    <title>Tune better models</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
     <meta name="date" content="2020-08-27" />
@@ -44,7 +44,7 @@
 
 class: title-slide, center, bottom
 
-# Tune models
+# Tune better models
 
 ## Tidymodels, virtually &amp;mdash; Session 03
 
@@ -131,7 +131,7 @@ tree_mod &lt;-
 ---
 class: middle, center
 
-&lt;img src="figs/rmed03-tune-trees/alz-tree-01-1.png" width="40%" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/alz-tree-01-1.png" width="40%" style="display: block; margin: auto;" /&gt;
 
 
 
@@ -149,12 +149,12 @@ class: middle, center
 
 .pull-left[
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-2-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-2-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
 ]
 
 .pull-right[
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-3-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-3-1.png" width="504" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -191,7 +191,7 @@ class: your-turn
 
 Fill in the blanks to return the accuracy and ROC AUC for this model using 10-fold cross-validation.
 
-<div class="countdown" id="timer_5f47dec0" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47eb03" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -330,12 +330,12 @@ exclude: true
 ---
 class: middle, center
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-15-1.png" width="864" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-15-1.png" width="864" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle, center
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-16-1.png" width="864" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-16-1.png" width="864" style="display: block; margin: auto;" /&gt;
 
 
 
@@ -398,19 +398,19 @@ Higher penalty ➡️ smaller trees.
 ---
 class: middle, center
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-19-1.png" width="720" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-19-1.png" width="720" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle, center
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-20-1.png" width="864" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-20-1.png" width="864" style="display: block; margin: auto;" /&gt;
 
 
 
 ---
 class: middle, center
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-21-1.png" width="864" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-21-1.png" width="864" style="display: block; margin: auto;" /&gt;
 
 ---
 name: bonsai
@@ -493,29 +493,29 @@ class: middle, center
 ---
 class: middle, center
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-23-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-23-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
 ---
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-24-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-24-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
 ---
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-25-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-25-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
 ---
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-26-1.png" width="504" style="display: block; margin: auto;" /&gt;
-
----
-class: middle, center
-
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-27-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-26-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle, center
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-28-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-27-1.png" width="504" style="display: block; margin: auto;" /&gt;
+
+---
+class: middle, center
+
+&lt;img src="figs/rmed03-tune/unnamed-chunk-28-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -583,7 +583,7 @@ Fit your workflow with 10-fold cross-validation and compare the ROC AUC of the r
 
 *Hint: you'll need https://www.tidymodels.org/find/parsnip/*
 
-<div class="countdown" id="timer_5f47deb7" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47e93e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -631,7 +631,7 @@ class: your-turn
 
 Challenge: Fit 3 more random forest models, each using 3, 8, and 30 variables at each split. Update your `rf_wf` with each new model. Which value maximizes the area under the ROC curve?
 
-<div class="countdown" id="timer_5f47de9c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47e9df" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -953,7 +953,7 @@ Then use `tune_grid()` to find the best combination of hyper-parameters to maxim
 
 How does it compare to the average ROC AUC across folds from `fit_resamples()`?
 
-<div class="countdown" id="timer_5f47dd51" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47e79d" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1122,12 +1122,12 @@ Quickly visualize tuning results
 rf_results %&gt;% autoplot()
 ```
 
-&lt;img src="figs/rmed03-tune-trees/rf-plot-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/rf-plot-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle, center
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-56-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-56-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
 
 
@@ -1230,7 +1230,7 @@ Use `select_best()`, `finalize_workflow()`, and `last_fit()` to take the best co
 
 How does our actual test ROC AUC compare to our cross-validated estimate?
 
-<div class="countdown" id="timer_5f47dd7b" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47eb56" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1311,7 +1311,7 @@ roc_values &lt;-
 autoplot(roc_values)
 ```
 
-&lt;img src="figs/rmed03-tune-trees/unnamed-chunk-65-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/rmed03-tune/unnamed-chunk-65-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
