--- a/site/index.html
+++ b/site/index.html
@@ -1268,15 +1268,15 @@
   <meta name="github-repo" content="rstudio-education/tidymodels-virtually"/>
   <meta name="twitter:title" content="Tidymodels, Virtually"/>
   <meta name="twitter:description" content="Tidymodels, Virtually"/>
-  <meta name="twitter:url" content="https://rstd.io/tip"/>
-  <meta name="twitter:image:src" content="https://repository-images.githubusercontent.com/288797104/d13f1700-e2cc-11ea-9ed7-0bf3a41af1e4"/>
-  <meta name="twitter:image:alt" content=""/>
+  <meta name="twitter:url" content="https://tmv.netlify.app/site/"/>
+  <meta name="twitter:image:src" content="https://repository-images.githubusercontent.com/257969031/8d10c100-e84e-11ea-8200-6a1aa6d8a356"/>
+  <meta name="twitter:image:alt" content="Birds perched"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="og:title" content="Tidymodels, Virtually"/>
   <meta name="og:description" content="Tidymodels, Virtually"/>
-  <meta name="og:url" content="https://rstd.io/tip"/>
-  <meta name="og:image" content="https://repository-images.githubusercontent.com/288797104/d13f1700-e2cc-11ea-9ed7-0bf3a41af1e4"/>
-  <meta name="og:image:alt" content=""/>
+  <meta name="og:url" content="https://tmv.netlify.app/site/"/>
+  <meta name="og:image" content="https://repository-images.githubusercontent.com/257969031/8d10c100-e84e-11ea-8200-6a1aa6d8a356"/>
+  <meta name="og:image:alt" content="Birds perched"/>
   <meta name="og:type" content="website"/>
   <meta name="og:locale" content="en_US"/>
   <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -1589,7 +1589,7 @@ We will use the software listed above only as an important backup should there b
 <h3 id="slides">Slides</h3>
 <ul>
 <li><a href="slides/rmed01-model.html">01: Build a model</a></li>
-<li><a href="slides/rmed02-workflows.html">02: Build better modeling workflows</a></li>
+<li><a href="slides/rmed02-workflows.html">02: Build better workflows</a></li>
 <li><a href="slides/rmed03-tune.html">03: Tune better models</a></li>
 </ul>
 <h2 id="workshops">Workshops</h2>
