--- a/site/index.html
+++ b/site/index.html
@@ -1588,6 +1588,7 @@ We will use the software listed above only as an important backup should there b
 </ul>
 <h3 id="slides">Slides</h3>
 <ul>
+<li><a href="slides/00-intro.html">00: Brief intro</a></li>
 <li><a href="slides/rmed01-model.html">01: Build a model</a></li>
 <li><a href="slides/rmed02-workflows.html">02: Build better workflows</a></li>
 <li><a href="slides/rmed03-tune.html">03: Tune better models</a></li>
