--- a/site/slides/00-intro.html
+++ b/site/slides/00-intro.html
@@ -81,9 +81,9 @@ class: middle, center
 
 
 
-# &lt;i class="fab fa-google"&gt;&lt;/i&gt;
+# &lt;i class="fas fa-crow"&gt;&lt;/i&gt;
 
-https://bit.ly/tmv-bd
+https://tmv.netlify.app/site/
 
 
 ---
@@ -179,13 +179,6 @@ background-size: contain
 
 .footnote[Credit: &lt;https://vas3k.com/blog/machine_learning/&gt;]
 
----
-
-Why do we want machines to learn?
-
-What are they learning?
-
-What does a machine need to learn?
 ---
 class: middle, center, frame
 
@@ -322,7 +315,7 @@ Build a model
 
 --
 
-Build better modeling workflows
+Build better workflows
 
 --
 
