--- a/site/slides/rmed02-workflows.html
+++ b/site/slides/rmed02-workflows.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Build better modeling workflows</title>
+    <title>Build better workflows</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
     <meta name="date" content="2020-08-27" />
@@ -45,7 +45,7 @@
 
 class: title-slide, center, bottom
 
-# Build better modeling workflows
+# Build better workflows
 
 ## Tidymodels, virtually &amp;mdash; Session 02
 
@@ -938,7 +938,7 @@ Unscramble! You have all the steps from our `knn_rec`- your challenge is to *uns
 
 Save the result as `knn_rec`
 
-<div class="countdown" id="timer_5f47e91b" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47ed54" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1172,7 +1172,7 @@ class: your-turn
 
 Fill in the blanks to make a workflow that combines `knn_rec` and with `knn_mod`.
 
-<div class="countdown" id="timer_5f47e8f4" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47eced" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1305,7 +1305,7 @@ class: your-turn
 
 Run the first chunk. Then try our KNN workflow on `alz_folds`. What is the ROC AUC?
 
-<div class="countdown" id="timer_5f47e93d" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47ee8d" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1410,7 +1410,7 @@ plr_mod %&gt;%
 #     alpha = 1, family = "binomial")
 ```
 
-<div class="countdown" id="timer_5f47ea94" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47ed1e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
