update intro slides with more links

--- a/slides/00-intro.html
+++ b/slides/00-intro.html
@@ -373,8 +373,16 @@ library(tidymodels)
 ---
 class: inverse, middle, center
 
-# To the workshop!
+# To the workshop! 🚀
 
+&lt;i class="fas fa-crow"&gt;&lt;/i&gt;
+
+https://tmv.netlify.app/site/
+
+
+&lt;i class="fas fa-cloud"&gt;&lt;/i&gt;
+
+http://bit.ly/tmv-rmed2020
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
